--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-config-next": "^13.4.19",
     "framer-motion": "^11.8.0",
     "mongodb": "^3.6.3",
+    "mongoose": "^8.8.0",
     "next": "^13.4.19",
     "postcss": "^8.2.10",
     "postcss-preset-env": "^9.1.1",
